<resources>
    <string name="app_name">Bumble Bee Count</string>
    <string name="facebook_app_id">221233091726222</string>
    <string name="fb_login_protocol_scheme">fb221233091726222</string>
    <string name="title_activity_submission">SubmissionActivity</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="submit">Submit</string>
    <string name="capture">Capture</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="completed">Completed</string>
    <string name="done">Done</string>
    <string name="step_two">STEP 2: IDENTIFY</string>
    <string name="step_three">STEP 3: GEOTAG</string>
    <string name="eastern">EASTERN SPECIES</string>
    <string name="western">WESTERN SPECIES</string>
    <string name="submit_dialog_heading">Buzz buzz!</string>
    <string name="submit_dialog_paragraph">(That\'s thank you in bee!)</string>
    <string name="home">Home</string>
    <string name="learn">Learn</string>
    <string name="my_list">My List</string>
    <string name="identified_species_title">IDENTIFIED SPECIES</string>
    <string name="unidentified_species">Unidentified</string>
    <string name="unidentified_species_latin_na">N/A</string>
    <string name="location">LOCATION</string>
    <string name="habitat">HABITAT</string>
    <string name="weather">WEATHER</string>
    <string name="finish">Finish</string>
    <string name="visit_foe">Visit Friends of the Earth</string>
    <string name="visit_foe_url">http://foecanada.org/en/</string>
    <string name="learn_about_bee_cause">Learn about the Bee Cause</string>
    <string name="learn_about_bee_cause_url">http://foecanada.org/en/issues/the-bee-cause/</string>
    <string name="donate">Donate</string>
    <string name="donate_url">http://foecanada.org/en/donate/</string>
    <string name="home_page_welcome">Welcome!</string>
    <string name="home_page_offline_message">Looks like a beautiful day to spot some bees!</string>
    <string name="useful_link">Useful Links</string>
    <string name="error_message_login">Something went wrong with your sign-in, please try again.</string>
    <string name="error_message_empty_login_credentials">Please enter a valid email/password.</string>
    <string name="error_message_empty_signup_credentials">Please fill out all fields.</string>
    <string name="error_message_signup">Something went wrong with your sign-up, please try again.</string>
    <string name="error_message_password_mismatch">Passwords do not match.</string>
    <string name="error_message_password_too_short">Passwords must be at least 8 characters long.</string>
    <string name="error_message_resend_email">Something went wrong with resending your confirmation email, please try again.</string>
    <string name="error_message_submit">Something went wrong with submitting your image.</string>
    <string name="error_message_history">Something went wrong with retrieving your history, please try again.</string>
    <string name="preference_file_key">com.blueprint.foe.beetracker.PREFERENCE_FILE_KEY</string>
    <string name="preference_login_token">LOGIN_TOKEN</string>
    <string name="preference_login_token_type">LOGIN_TOKEN_TYPE</string>
    <string name="preference_login_client">LOGIN_CLIENT</string>
    <string name="preference_login_expiry">LOGIN_EXPIRY</string>
    <string name="preference_login_uid">LOGIN_UID</string>
    <string name="preference_first_time_identifying">FIRST_TIME_IDENTIFYING</string>
    <string name="signup_name">SIGNUP_NAME</string>
    <string name="signup_email">SIGNUP_EMAIL</string>
    <string name="signup_password">SIGNUP_PASSWORD</string>
    <string name="signup_error_message_placeholder">%1$s</string>
    <string name="name_label">"NAME</string>
    <string name="name_placeholder">"Johnny Appleseed</string>
    <string name="email_label">EMAIL</string>
    <string name="login_email_placeholder">Enter email</string>
    <string name="signup_email_placeholder">bees@knees.com</string>
    <string name="password_label">PASSWORD</string>
    <string name="login_password_placeholder">Enter password</string>
    <string name="signup_password_placeholder">Minimum 8 characters</string>
    <string name="confirm_password_label">RE-ENTER PASSWORD</string>
    <string name="confirm_password_placeholder">Re-enter password</string>
    <string name="agreement_acknowledgement">By signing up, I agree to the <b><a href="https://foecanada.org/en/terms-and-conditions-of-use/">terms and conditions</a></b> and <b><a href="https://foecanada.org/en/about/privacy-policy/">privacy policy</a></b></string>
    <string name="almost_there">Almost there, %1$s!</string>
    <string name="confirm_email_description">We\'ve sent an email to <b>%1$s</b> with a confirmation link to complete your signup.</string>
    <string name="resend_email">Resend Email</string>
    <string name="confirm_email_resent">We\'ve sent another email to <b>%1$s</b>.</string>
    <string name="back_to_signin">Return to login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="great_bumblebee_count">The Great Bumblebee Count</string>
    <string name="foe_presents">Friends of Earth Canada Presents</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="identify_popup_heading">Which bee?</string>
    <string name="identify_popup_message">Select the species that best matches your photo.</string>
    <string name="identify_popup_finish">Got it</string>
    <string name="geotag_error_message">Please enter the following fields.</string>
    <string name="history_zero_sightings">0 sightings</string>
    <string name="history_one_sighting">1 sighting</string>
    <string name="history_plural_sightings">%1$d sightings</string>
    <string name="history_cta">Submit your first sighting!</string>
    <string name="history_submit_instruction">You can begin by hitting\nCapture below.</string>
    <string name="latin_species">Bombus %1$s</string>
    <string name="found_at">FOUND AT</string>
    <string name="skip_step">Skip step</string>
</resources>
