<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:clickable="true"
    tools:context="com.blueprint.foe.beetracker.SignUpFragment">

    <android.support.constraint.Guideline
        android:id="@+id/leftSignupGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/rightSignupGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/inputFieldsTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:background="@color/errorRed"
        android:visibility="gone"
        android:textColor="@color/poppyRed"
        android:text="@string/signup_error_message_placeholder"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_title_top_padding"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftSignupGuideline" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_title_top_padding"
        android:adjustViewBounds="true"
        android:paddingTop="@dimen/zero"
        android:paddingBottom="@dimen/zero"
        android:paddingStart="@dimen/zero"
        android:paddingEnd="@dimen/zero"
        android:src="@mipmap/cancel_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightSignupGuideline" />

    <RelativeLayout
        android:id="@+id/inputFieldsRelativeLayout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/rightSignupGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftSignupGuideline"
        app:layout_constraintTop_toBottomOf="@+id/inputFieldsTopGuideline">

        <TextView
            android:id="@+id/sign_up_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:labelFor="@+id/sign_up_name_input"
            android:text="@string/name_label"
            android:textColor="@color/subheadingTextColour"
            android:textSize="@dimen/login_signup_label_text_size" />

        <EditText
            android:id="@+id/sign_up_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_name_label"
            android:layout_marginLeft="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginRight="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/name_placeholder"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/login_signup_input_text_size"
            android:nextFocusDown="@+id/sign_up_email_input"
            android:theme="@style/LoginSignupEditTextTheme" />

        <TextView
            android:id="@+id/sign_up_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_name_input"
            android:layout_marginTop="@dimen/medium_small_padding"
            android:labelFor="@+id/sign_up_email_input"
            android:text="@string/email_label"
            android:textColor="@color/subheadingTextColour"
            android:textSize="@dimen/login_signup_label_text_size" />

        <EditText
            android:id="@id/sign_up_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_email_label"
            android:layout_marginLeft="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginRight="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/signup_email_placeholder"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/login_signup_input_text_size"
            android:nextFocusDown="@+id/sign_up_password_input"
            android:theme="@style/LoginSignupEditTextTheme" />

        <TextView
            android:id="@+id/sign_up_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_email_input"
            android:layout_marginTop="@dimen/medium_small_padding"
            android:labelFor="@+id/sign_up_password_input"
            android:text="@string/password_label"
            android:textColor="@color/subheadingTextColour"
            android:textSize="@dimen/login_signup_label_text_size" />

        <EditText
            android:id="@id/sign_up_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_password_label"
            android:layout_marginLeft="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginRight="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/signup_password_placeholder"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/login_signup_input_text_size"
            android:nextFocusDown="@+id/sign_up_confirm_password_input"
            android:theme="@style/LoginSignupEditTextTheme" />

        <TextView
            android:id="@+id/sign_up_confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_password_input"
            android:layout_marginTop="@dimen/medium_small_padding"
            android:labelFor="@+id/sign_up_confirm_password_input"
            android:text="@string/confirm_password_label"
            android:textColor="@color/subheadingTextColour"
            android:textSize="@dimen/login_signup_label_text_size" />

        <EditText
            android:id="@id/sign_up_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sign_up_confirm_password_label"
            android:layout_marginLeft="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginRight="@dimen/login_signup_input_padding_adjustment"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/confirm_password_placeholder"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/login_signup_input_text_size"
            android:theme="@style/LoginSignupEditTextTheme" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SignupButtonRelativeLayout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/signup_button_bottom_padding"
        app:layout_constraintEnd_toEndOf="@id/rightSignupGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftSignupGuideline"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/agreement_acknowledgement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_acknowledgement"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:gravity="center_horizontal" />

        <android.support.v7.widget.CardView
            android:id="@+id/signupCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/agreement_acknowledgement"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/small_padding"
            app:cardCornerRadius="@dimen/login_signup_button_corner_radius">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grassGreen"
                android:paddingBottom="@dimen/medium_padding"
                android:paddingLeft="@dimen/login_signup_button_side_padding"
                android:paddingRight="@dimen/login_signup_button_side_padding"
                android:paddingTop="@dimen/medium_padding"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
