<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/medium_padding"
            android:paddingStart="34dp"
            android:drawableTop="@mipmap/icon_home_grey"
            android:drawablePadding="4dp"
            android:textColor="@color/mediumDarkGrey"
            android:id="@+id/buttonHome"/>
        <TextView
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignBaseline="@id/buttonHome"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/medium_padding"
            android:paddingStart="@dimen/medium_padding"
            android:drawableTop="@mipmap/icon_capture_grey"
            android:drawablePadding="4dp"
            android:gravity="center|center_vertical"
            android:textColor="@color/mediumDarkGrey"
            android:text="@string/capture"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_list"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/buttonSubmit"
            android:drawableTop="@mipmap/icon_me_grey"
            android:drawablePadding="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="34dp"
            android:paddingStart="@dimen/medium_padding"
            android:textColor="@color/mediumDarkGrey"
            android:id="@+id/buttonHistory"/>
    </RelativeLayout>
    <View
        android:layout_above="@id/navBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/mediumGrey"/>
</merge>