<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.blueprint.foe.beetracker.HomePageActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rlImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/home_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/default_home_illustration"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome"
                    android:layout_alignTop="@id/home_imageview"
                    android:layout_alignStart="@id/home_imageview"
                    android:layout_alignEnd="@id/home_imageview"
                    android:paddingTop="@dimen/big_padding"
                    android:paddingStart="@dimen/big_padding"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="Welcome!" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/home_imageview"
                    android:layout_below="@id/welcome"
                    android:layout_alignStart="@id/home_imageview"
                    android:layout_alignEnd="@id/home_imageview"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingStart="@dimen/big_padding"
                    android:paddingEnd="80dp"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="Looks like a beautiful day to spot some bees!"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:paddingTop="@dimen/big_padding"
                android:textSize="16sp"
                android:textColor="#bdbdbd"
                android:text="Useful Links"/>
            <TextView
                android:id="@+id/visit_foe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                android:drawableEnd="@mipmap/follow_link_icon"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/visit_foe"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:background="@color/mediumGrey"/>
            <TextView
                android:id="@+id/learn_bee_cause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                android:drawableEnd="@mipmap/follow_link_icon"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/learn_about_bee_cause" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:background="@color/mediumGrey"/>
            <TextView
                android:id="@+id/donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                android:drawableEnd="@mipmap/follow_link_icon"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/donate"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/navigation_bar"/>
</RelativeLayout>
